fix(ktl-3945): code blocks on mobile

--- a/components/code-highlight/code-hightlight.module.css
+++ b/components/code-highlight/code-hightlight.module.css
@@ -3,4 +3,5 @@
     font-family: 'JetBrains Mono', monospace;
     font-size: 14px;
     line-height: 2;
+    overflow-x: auto;
 }
